no aggressiveopts